--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 </span>
             </div>
         </header>
-        <img style="margin-left: 150px;" width="340" height="340" src="/Assets/web-development-svgrepo-com.svg"/>
+        <img style="margin-left: 150px;" width="25%" height="25%" src="/Assets/web-development-svgrepo-com.svg"/>
         <main>
             <p>
                 <h1 style="color: #007FFF;">Hello!</h1>
