--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <li>Riot Games API Endpoint</li>
                     <li>Google Cloud Hosting</li>
                 </ul>
-                <img id= "league-img" src="/Assets/LEAGUE.png" width="330" height="450">
+                <img id= "league-img" src="/Assets/LEAGUE.png" width="25%" height="35%">
                 <hr style="margin-top: 90px; margin-bottom: 90px; width: 80%">
                 <h8 style="font-weight:bolder; font-size: larger; padding-left: 50px; padding-bottom: 20px; font-style: italic; color: #368ecd; display: inline-block;">This Website</h8>
                 <ul id="project-list" style="list-style-type: disc;">
@@ -47,7 +47,7 @@
                     <li>CSS3</li>
                     <li>JavaScript</li>
                 </ul>   
-                <img id= "website-img" src="/Assets/website.png" width="630" height="350">
+                <img id= "website-img" src="/Assets/website.png" width="40%" height="22%">
                 <hr style="margin-top: 90px; width: 80%">
                 <p id="footer">Visit my <a id="github-link" href="https://github.com/lin-simon" target="_blank">GitHub</a> for more in depth</p>
         </section>
