--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <img id= "league-img" src="/Assets/LEAGUE.png" width="25%" height="35%">
                 <hr style="margin-top: 90px; margin-bottom: 90px; width: 80%">
                 <h8 style="font-weight:bolder; font-size: larger; padding-left: 50px; padding-bottom: 20px; font-style: italic; color: #368ecd; display: inline-block;">This Website</h8>
-                <ul id="project-list" style="list-style-type: disc;">
+                <ul id="project-list">
                     <li>HTML5</li>
                     <li>CSS3</li>
                     <li>JavaScript</li>
