--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <section id="project-section" style="display: inline-block;">
             <h1 id="project-header">Projects</h1>
                 <h8 style="font-weight:bolder; font-size: larger; padding-left: 50px; padding-bottom: 20px; font-style: italic; color: #ffb300; display: inline-block;">Discord Embedded Riot Games Bot</h8>
-                <ul id="project-list" style="list-style-type: disc; display: inline-block;">
+                <ul id="project-list">
                     <li>Python 3</li>
                     <li>Selenium WebDriver</li>
                     <li>Discord.py Framework</li>
