--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <hr style="margin-top: 50px; margin-bottom: 50px; width: 80%">
         <section id="project-section" style="display: inline-block;">
             <h1 id="project-header">Projects</h1>
-                <h8 style="font-weight:bolder; font-size: larger; padding-left: 50px; padding-bottom: 20px; font-style: italic; color: #ffb300; display: inline-block;">Discord Embedded Riot Games Bot</h8>
+                <h8 id="project-name">Discord Embedded Riot Games Bot</h8>
                 <ul id="project-list">
                     <li>Python 3</li>
                     <li>Selenium WebDriver</li>
@@ -39,7 +39,7 @@
                     <li>Riot Games API Endpoint</li>
                     <li>Google Cloud Hosting</li>
                 </ul>
-                <img id= "league-img" src="/Assets/LEAGUE.png" width="25%" height="35%">
+                <img id= "league-img" src="/Assets/LEAGUE.png" width="25%" height="30%">
                 <hr style="margin-top: 90px; margin-bottom: 90px; width: 80%">
                 <h8 style="font-weight:bolder; font-size: larger; padding-left: 50px; padding-bottom: 20px; font-style: italic; color: #368ecd; display: inline-block;">This Website</h8>
                 <ul id="project-list">
@@ -64,7 +64,6 @@
                 <span>
                     <a href="/Assets/Simon_Lin_Resume.PDF" target="_blank"><img width="150" height="150" src="Assets/resume.png"></a>
                 </span>
-                
             </div>
         </section>
     </body>
