--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </ul>
                 <img id= "league-img" src="/Assets/LEAGUE.png" width="25%" height="30%">
                 <hr style="margin-top: 90px; margin-bottom: 90px; width: 80%">
-                <h8 style="font-weight:bolder; font-size: larger; padding-left: 50px; padding-bottom: 20px; font-style: italic; color: #368ecd; display: inline-block;">This Website</h8>
+                <h8 id="project-name" style="color: #368ecd">This Website</h8>
                 <ul id="project-list">
                     <li>HTML5</li>
                     <li>CSS3</li>
