--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 </span>
             </div>
         </header>
-        <img style="margin-left: 150px;" width="25%" height="25%" src="/Assets/web-development-svgrepo-com.svg"/>
+        <img style="margin-left: 10%;" width="25%" height="25%" src="/Assets/web-development-svgrepo-com.svg"/>
         <main>
             <p>
                 <h1 style="color: #007FFF;">Hello!</h1>
@@ -54,11 +54,11 @@
         <hr style="margin-top: 50px; width: 80%">
         <section id="contact-section">
             <h1 style="padding:100px">Contact Me!</h1>
-            <div id="contact-logos" style="margin-left:30%;">
+            <div id="contact-logos" style="margin-left:auto;">
                 <span>
                     <a href="https://www.linkedin.com/in/simon-lin-65615823a" target="_blank"><img width="150" height="150" src="Assets/linkedin.png"></a>
                 </span>
-                <span style="padding:50px ;">
+                <span style="padding:5% ;">
                     <a href="mailto: s1lin@ryerson.ca   " target="_blank"><img width="170" height="150" src="Assets/Gmail_icon_(2020).svg.png"></a>
                 </span>
                 <span>
