--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <br> at <span style="color: #df4276">Toronto Metropolitan University</span>
             </p>
         </main>
-        <hr style="margin-top: 50px; margin-bottom: 50px; width: 80%">
+        <hr style="margin-top: 15vh; margin-bottom: 10vh; width: 80%">
         <section id="project-section" style="display: inline-block;">
             <h1 id="project-header">Projects</h1>
                 <h8 id="project-name">Discord Embedded Riot Games Bot</h8>
@@ -51,18 +51,17 @@
                 <hr style="margin-top: 90px; width: 80%">
                 <p id="footer">Visit my <a id="github-link" href="https://github.com/lin-simon" target="_blank">GitHub</a> for more in depth</p>
         </section>
-        <hr style="margin-top: 50px; width: 80%">
         <section id="contact-section">
-            <h1 style="padding:100px">Contact Me!</h1>
+            <h1 id="contact-header"style="padding:100px">Contact Me!</h1>
             <div id="contact-logos" style="margin-left:auto;">
                 <span>
-                    <a href="https://www.linkedin.com/in/simon-lin-65615823a" target="_blank"><img width="150" height="150" src="Assets/linkedin.png"></a>
+                    <a href="https://www.linkedin.com/in/simon-lin-65615823a" target="_blank"><img width="20%" height="20%" src="Assets/linkedin.png"></a>
                 </span>
                 <span style="padding:5% ;">
-                    <a href="mailto: s1lin@ryerson.ca   " target="_blank"><img width="170" height="150" src="Assets/Gmail_icon_(2020).svg.png"></a>
+                    <a href="mailto: s1lin@ryerson.ca   " target="_blank"><img width="25%" height="30%" src="Assets/Gmail_icon_(2020).svg.png"></a>
                 </span>
                 <span>
-                    <a href="/Assets/Simon_Lin_Resume.PDF" target="_blank"><img width="150" height="150" src="Assets/resume.png"></a>
+                    <a href="/Assets/Simon_Lin_Resume.PDF" target="_blank"><img width="20%" height="20%" src="Assets/resume.png"></a>
                 </span>
             </div>
         </section>
