--- a/index.html
+++ b/index.html
@@ -52,16 +52,16 @@
                 <p id="footer">Visit my <a id="github-link" href="https://github.com/lin-simon" target="_blank">GitHub</a> for more in depth</p>
         </section>
         <section id="contact-section">
-            <h1 id="contact-header"style="padding:100px">Contact Me!</h1>
-            <div id="contact-logos" style="margin-left:auto;">
+            <h1 id="contact-header"style="padding:100px; font-weight:bolder">Contact Me!</h1>
+            <div id="contact-logos">
                 <span>
-                    <a href="https://www.linkedin.com/in/simon-lin-65615823a" target="_blank"><img width="20%" height="20%" src="Assets/linkedin.png"></a>
+                    <a href="https://www.linkedin.com/in/simon-lin-65615823a" target="_blank"><img width="12%" height="20%" src="Assets/linkedin.png"></a>
                 </span>
-                <span style="padding:5% ;">
-                    <a href="mailto: s1lin@ryerson.ca   " target="_blank"><img width="25%" height="30%" src="Assets/Gmail_icon_(2020).svg.png"></a>
+                <span style="padding:6%">
+                    <a href="mailto: s1lin@ryerson.ca" target="_blank"><img width="13%" height="30%" src="Assets/Gmail_icon_(2020).svg.png"></a>
                 </span>
                 <span>
-                    <a href="/Assets/Simon_Lin_Resume.PDF" target="_blank"><img width="20%" height="20%" src="Assets/resume.png"></a>
+                    <a href="/Assets/Simon_Lin_Resume.PDF" target="_blank"><img width="12%" height="20%" src="Assets/resume.png"></a>
                 </span>
             </div>
         </section>
