--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                     <li>HTML5</li>
                     <li>CSS3</li>
                     <li>JavaScript</li>
+                    <li>Hosted on GitHub Pages</li>
                 </ul>   
                 <img id= "website-img" src="/Assets/website.png" width="40%" height="22%">
                 <hr style="margin-top: 90px; width: 80%">
