--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <main>
             <p>
                 <h1 style="color: #007FFF;">Hello!</h1>
-                <br> I'm Simon, an
-                <br> undergraduate student 
+                <br> I'm Simon, 
+                <br> an undergraduate student 
                 <br> studying <span style="color:#94d32f">Computer Science</span>
-                <br> at <span style="color: #df4276">Toronto Metropolitan University</span>
+                <br> at <span style="color: #3695e2">Ryerson</span> <span style="color: #fbc02ae5"> University</span>
             </p>
         </main>
         <hr style="margin-top: 16vh; margin-bottom: 10vh; width: 80%">
@@ -44,7 +44,7 @@
                 <h8 id="project-name" style="color: #368ecd">This Website</h8>
                 <ul id="project-list">
                     <li>HTML5</li>
-                    <li>CSS3</li>
+                    <li>CSS3</li> 
                     <li>JavaScript</li>
                     <li>Hosted on GitHub Pages</li>
                 </ul>   
