--- a/old/old.html
+++ b/old/old.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="index.css" type="text/css">
+        <link rel="stylesheet" href="old.css" type="text/css">
         <link rel="icon" href="/Assets/LogoMakr-4n8luw.png">
     </head>
     <body id="landing">
