--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="test.css" type="text/css">
+    <link rel="stylesheet" href="index.css" type="text/css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700">
 </head>
 
@@ -12,7 +12,7 @@
     <body>
         <nav>
             <div id="topbar">
-                <a href="test.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="projects.html">Projects</a>
                 <a href="#contact-section">Contact</a>
             </div>
