--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="index.css" type="text/css">
+    <link rel="icon" href="/Assets/LogoMakr-4n8luw.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700">
+    <title>Simon Lin/title>
 </head>
 
 
