--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="index.css" type="text/css">
     <link rel="icon" href="/Assets/LogoMakr-4n8luw.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700">
-    <title>Simon Lin/title>
+    <title>Simon Lin</title>
 </head>
 
 
