--- a/projects.html
+++ b/projects.html
@@ -4,41 +4,40 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="/Assets/LogoMakr-4n8luw.png">
     <link rel="stylesheet" href="index.css" type="text/css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700">
+    <title>Simon Lin</title>
 </head>
 
 <head>
     <body>
         <nav>
             <div id="topbar">
-                <a href="index.html">Home</a>
-                <a href="projects.html">Projects</a>
-                <a href="#contact-section">Contact</a>
+                <a href="index.html">&lt;/Home&gt;</a>
+                <a href="projects.html">&lt;/Projects&gt;</a>
+                <a href="contact.html">&lt;/Contact&gt;</a>
             </div>
         </nav>
-    <main>
-        <header>
-            <h1 id="project-header">
-                Projects
-            </h1>
-        </header>
-        <section id="projects">
-            <article class="project-card">
-                <img class="project-image" src="/Assets/testimg.png" width="100%">
-                <h3>RIOT API BOT</h3>
-            </article>
-            <article class="project-card">
-                <img class="project-image" src="/Assets/testimg.png" width="100%">
-            </article>
-            <article class="project-card">
-                <img class="project-image" src="/Assets/testimg.png" width="100%">
-            </article>
-            <article class="project-card">
-                <img class="project-image" src="/Assets/testimg.png" width="100%">
-            </article>
-        </section>
-    </main>
-
+    </body>
+    <h1 id="project-header">Projects</h1>
+    <body>
+        <main>
+            <section id="projects">
+                <article class="project-card">
+                    <img class="project-image" src="/Assets/testimg.png" width="100%">
+                    <h3>RIOT API BOT</h3>
+                </article>
+                <article class="project-card">
+                    <img class="project-image" src="/Assets/testimg.png" width="100%">
+                </article>
+                <article class="project-card">
+                    <img class="project-image" src="/Assets/testimg.png" width="100%">
+                </article>
+                <article class="project-card">
+                    <img class="project-image" src="/Assets/testimg.png" width="100%">
+                </article>
+            </section>
+        </main>
     </body>
 </head>
