--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
 </head>
 
 
-<head>
 <body>
     <nav>
         <div id="topbar">
-            <a href="index.html">Home</a>
-            <a href="projects.html">Projects</a>
-            <a href="#contact-section">Contact</a>
+            <a href="index.html">&lt;/Home&gt;</a>
+            <a href="lab10c/src/app/lab10c.html">&lt;/LAB10C&gt;</a>
+            <a href="#contact-section">&lt;/Contact&gt;</a>
         </div>
     </nav>
     <main>  
@@ -33,6 +32,5 @@
         </div>  
     </main>
 </body>
-</head>
 
 </html>
