--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <nav>
         <div id="topbar">
             <a href="index.html">&lt;/Home&gt;</a>
-            <a href="lab10c/src/app/lab10c.html">&lt;/LAB10C&gt;</a>
-            <a href="#contact-section">&lt;/Contact&gt;</a>
+            <a href="projects.html">&lt;/LAB10C&gt;</a>
+            <a href="contact.html">&lt;/Contact&gt;</a>
         </div>
     </nav>
     <main>  
