--- a/contact.html
+++ b/contact.html
@@ -4,16 +4,30 @@
 
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="contact.css" type="text/css">
+	<link rel="stylesheet" href="index.css" type="text/css">
 	<link rel="icon" href="/Assets/LogoMakr-4n8luw.png">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<title>Simon Lin</title>
 </head>
 
+<script>
+	$('#index').click(function(event){
+    event.preventDefault();
+});
+</script>
+<body>
+    <nav>
+        <div id="topbar">
+            <a href="index.html">&lt;/home&gt;</a>
+            <a href="projects.html">&lt;/projects&gt;</a>
+            <a href="contact.html">&lt;/contact&gt;</a>
+        </div>
+    </nav>
 
-<div class="topnav" id="myTopnav">
-	<a href="index.html">&lt;/Home&gt;</a>
-    <a href="projects.html">&lt;/Projects&gt;</a>
-    <a href="#contact-section">&lt;/Contact&gt;</a>
-</div>
+    <main>
+        <span>
+            
+        </span>
+    </main>
+</body>
