--- a/projects.html
+++ b/projects.html
@@ -14,9 +14,9 @@
     <body>
         <nav>
             <div id="topbar">
-                <a href="index.html">&lt;/Home&gt;</a>
-                <a href="projects.html">&lt;/Projects&gt;</a>
-                <a href="contact.html">&lt;/Contact&gt;</a>
+                <a href="index.html">&lt;/home&gt;</a>
+                <a href="projects.html">&lt;/projects&gt;</a>
+                <a href="contact.html">&lt;/contact&gt;</a>
             </div>
         </nav>
     </body>
