--- a/projects.html
+++ b/projects.html
@@ -21,12 +21,11 @@
         </nav>
     </body>
     <h1 id="project-header">Projects</h1>
-    <body>
+    <body style="text-align:center;">
         <main>
             <section id="projects">
                 <article class="project-card">
                     <img class="project-image" src="/Assets/testimg.png" width="100%">
-                    <h3>RIOT API BOT</h3>
                 </article>
                 <article class="project-card">
                     <img class="project-image" src="/Assets/testimg.png" width="100%">
