--- a/contact.html
+++ b/contact.html
@@ -1,21 +1,15 @@
 <!DOCTYPE html>
 
 <html>
-
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="index.css" type="text/css">
+    <link rel="stylesheet" href="contact.css" type="text/css">
 	<link rel="icon" href="/Assets/LogoMakr-4n8luw.png">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<title>Simon Lin</title>
 </head>
 
-<script>
-	$('#index').click(function(event){
-    event.preventDefault();
-});
-</script>
 <body>
     <nav>
         <div id="topbar">
@@ -25,9 +19,24 @@
         </div>
     </nav>
 
-    <main>
-        <span>
-            
-        </span>
-    </main>
+<h1 id="project-header" style="margin-bottom: 10%;">Contact me!</h1>
+
+<div class="centered">
+    <section class="cards">
+        <article class="card">
+            <a href="https://www.linkedin.com/in/simon-lin-65615823a" target="_blank"><img width="79%" src="Assets/linkedin.png"></a>
+        </article>
+        
+        <article class="card">
+            <a href="mailto: lin.simon2003@gmail.com" target="_blank"><img width="100%" src="Assets/Gmail_icon_(2020).svg.png"></a>
+        </article>
+        <article class="card">
+            <a id="github-link" href="https://github.com/lin-simon" target="_blank"><img src="Assets/github.png" width="93%" style="border-radius:10px"></a>
+        </article>
+        <article class="card">
+            <a href="/Assets/Simons_Resume.pdf" target="_blank"><img width="80%" src="Assets/resume.png"></a>
+        </article>
+
+    </section>
+</div>
 </body>
