--- a/projects.html
+++ b/projects.html
@@ -6,37 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="/Assets/LogoMakr-4n8luw.png">
     <link rel="stylesheet" href="index.css" type="text/css">
+    <link rel="stylesheet" href="projects.css" type="text/css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700">
     <title>Simon Lin</title>
 </head>
 
-<head>
-    <body>
-        <nav>
-            <div id="topbar">
-                <a href="index.html">&lt;/home&gt;</a>
-                <a href="projects.html">&lt;/projects&gt;</a>
-                <a href="contact.html">&lt;/contact&gt;</a>
-            </div>
-        </nav>
-    </body>
-    <h1 id="project-header">Projects</h1>
-    <body style="text-align:center;">
-        <main>
-            <section id="projects">
-                <article class="project-card">
-                    <img class="project-image" src="/Assets/testimg.png" width="100%">
-                </article>
-                <article class="project-card">
-                    <img class="project-image" src="/Assets/testimg.png" width="100%">
-                </article>
-                <article class="project-card">
-                    <img class="project-image" src="/Assets/testimg.png" width="100%">
-                </article>
-                <article class="project-card">
-                    <img class="project-image" src="/Assets/testimg.png" width="100%">
-                </article>
-            </section>
-        </main>
-    </body>
-</head>
+<body>
+    <nav>
+        <div id="topbar">
+            <a href="index.html">&lt;/home&gt;</a>
+            <a href="projects.html">&lt;/projects&gt;</a>
+            <a href="contact.html">&lt;/contact&gt;</a>
+        </div>
+    </nav>
+</body>
+
+<h1 id="project-header">Projects</h1>
+
+<div class="centered">
+    <section class="cards">
+        <article class="card">
+            <img src="Assets/testimg.png" width="100%" style="border-radius:10px">
+            <p>content for card 1</p>
+        </article>
+        <article class="card">
+            <img src="Assets/testimg.png" width="100%" style="border-radius:10px">
+            <p>content for card 2</p>
+        </article>
+        <article class="card">
+            <img src="Assets/testimg.png" width="100%" style="border-radius:10px">
+            <p>content for card 3</p>   
+        </article>
+    </section>
+</div>
