--- a/projects.html
+++ b/projects.html
@@ -26,8 +26,8 @@
 <div class="centered">
     <section class="cards">
         <article class="card">
-            <img src="Assets/testimg.png" width="100%" style="border-radius:10px">
-            <p>content for card 1</p>
+            <img src="Assets/bot.png" width="100%" height="75%" style="border-radius:10px">
+            <p>Riot Games API Discord Bot</p>
         </article>
         <article class="card">
             <img src="Assets/testimg.png" width="100%" style="border-radius:10px">
