--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body>
     <nav>
         <div id="topbar">
-            <a class='navbutton' href="index.html">&lt;/home&gt;</a>
-            <a class='navbutton' href="projects.html">&lt;/projects&gt;</a>
-            <a class='navbutton' href="contact.html">&lt;/contact&gt;</a>
+            <a class='navbutton' href="index">&lt;/home&gt;</a>
+            <a class='navbutton' href="projects">&lt;/projects&gt;</a>
+            <a class='navbutton' href="contact">&lt;/contact&gt;</a>
         </div>
     </nav>
     <main>  
