rm files, strip .html

--- a/projects.html
+++ b/projects.html
@@ -14,9 +14,9 @@
 <body>
     <nav>
         <div id="topbar">
-            <a href="index.html">&lt;/home&gt;</a>
-            <a href="projects.html">&lt;/projects&gt;</a>
-            <a href="contact.html">&lt;/contact&gt;</a>
+            <a href="index">&lt;/home&gt;</a>
+            <a href="projects">&lt;/projects&gt;</a>
+            <a href="contact">&lt;/contact&gt;</a>
         </div>
     </nav>
 </body>
@@ -31,7 +31,7 @@
         </article>
         <article class="card">
             <img src="Assets/testimg.png" width="100%" style="border-radius:10px">
-            <p>content for card 2</p>
+            <p></p>
         </article>
         <article class="card">
             <img src="Assets/testimg.png" width="100%" style="border-radius:10px">
