--- a/projects.html
+++ b/projects.html
@@ -30,12 +30,12 @@
             <p>Riot Games API Discord Bot</p>
         </article>
         <article class="card">
-            <img src="Assets/testimg.png" width="100%" style="border-radius:10px">
-            <p></p>
+            <img src="Assets/1_HfZmZayUqnYioPC9qTfd4A.webp" width="100%" height="70%" style="border-radius:10px">
+            <p>Real-time Object Recognition and HAAR Classifiers with OpenCV</p>
         </article>
         <article class="card">
-            <img src="Assets/testimg.png" width="100%" style="border-radius:10px">
-            <p>content for card 3</p>   
+            <img src="Assets/html_css-feature_0.png" width="100%" height="75%" style="border-radius:10px">
+            <p>Portfolio Website</p>   
         </article>
     </section>
 </div>
