--- a/contact.html
+++ b/contact.html
@@ -13,9 +13,9 @@
 <body>
     <nav>
         <div id="topbar">
-            <a href="index.html">&lt;/home&gt;</a>
-            <a href="projects.html">&lt;/projects&gt;</a>
-            <a href="contact.html">&lt;/contact&gt;</a>
+            <a href="index">&lt;/home&gt;</a>
+            <a href="projects">&lt;/projects&gt;</a>
+            <a href="contact">&lt;/contact&gt;</a>
         </div>
     </nav>
 
