--- a/contact.html
+++ b/contact.html
@@ -19,16 +19,15 @@
         </div>
     </nav>
 
-<h1 id="project-header" style="margin-bottom: 10%;">Contact me!</h1>
+<h1 id="contact-header" style="margin-bottom: 10%;">Contact me!</h1>
 
 <div class="centered">
     <section class="cards">
         <article class="card">
             <a href="https://www.linkedin.com/in/simon-lin-65615823a" target="_blank"><img width="79%" src="Assets/linkedin.png"></a>
         </article>
-        
         <article class="card">
-            <a href="mailto: lin.simon2003@gmail.com" target="_blank"><img width="100%" src="Assets/Gmail_icon_(2020).svg.png"></a>
+            <a href="mailto: lin.simon2003@gmail.com" target="_blank"><img width="96%" src="Assets/Gmail_icon_(2020).svg.png"></a>
         </article>
         <article class="card">
             <a id="github-link" href="https://github.com/lin-simon" target="_blank"><img src="Assets/github.png" width="93%" style="border-radius:10px"></a>
