--- a/projects.html
+++ b/projects.html
@@ -26,15 +26,15 @@
 <div class="centered">
     <section class="cards">
         <article class="card">
-            <img src="Assets/bot.png" width="100%" height="75%" style="border-radius:10px">
+            <a href="https://github.com/lin-simon/Discord.py-RIOT-API-Bot" target="_blank"><img src="Assets/bot.png" width="100%" height="75%" style="border-radius:10px"></a>
             <p>Riot Games API Discord Bot</p>
         </article>
         <article class="card">
-            <img src="Assets/1_HfZmZayUqnYioPC9qTfd4A.webp" width="100%" height="70%" style="border-radius:10px">
+            <a href="https://github.com/lin-simon/OpenCV" target="_blank"><img src="Assets/1_HfZmZayUqnYioPC9qTfd4A.webp" width="100%" height="70%" style="border-radius:10px"></a>
             <p>Real-time Object Recognition and HAAR Classifiers with OpenCV</p>
         </article>
         <article class="card">
-            <img src="Assets/html_css-feature_0.png" width="100%" height="75%" style="border-radius:10px">
+        <a href="https://github.com/lin-simon/lin-simon.github.io" target="_blank"><img src="Assets/html_css-feature_0.png" width="100%" height="75%" style="border-radius:10px"></a>
             <p>Portfolio Website</p>   
         </article>
     </section>
