--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
             <a id="github-link" href="https://github.com/lin-simon" target="_blank"><img src="Assets/github.png" width="93%" style="border-radius:10px"></a>
         </article>
         <article class="card">
-            <a href="/Assets/Simons_Resume.pdf" target="_blank"><img width="80%" src="Assets/resume.png"></a>
+            <a href="/Assets/resume.pdf" target="_blank"><img width="80%" src="Assets/resume.png"></a>
         </article>
 
     </section>
