--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,14 @@
 <h1 id="project-header">Projects</h1>
 
 <div class="centered">
+    <p style="font-size: 20px; margin-right:13%; position: absolute; top: 1; right: 0;; z-index: -1;">Portfolio Website</p>
+    <p style="font-size: 20px; margin-top:3%; margin-right:10.5%; position: absolute; top: 1; right: 0;; z-index: -1;"><b>HTML | CSS | TypeScript</b></p>
+    <p style="font-size: 20px; margin-left:9%; position: absolute; z-index: -1;">Riot Games API Discord Bot</p>
+    <p style="font-size: 20px; margin-top:3%; margin-left:7.7%; position: absolute; z-index: -1;"><b>Python | Selenium | Discord.py</b></p>
+
     <section class="cards">
+        <p style="font-size: 20px; position: fixed; z-index: -1;">Objection Recognition: OpenCV</p>
+        <p style="font-size: 20px; margin-top: 3%; position: fixed; z-index: -1;"><b>OpenCV | Python | XML</b></p>
         <article class="card">
             <a href="https://github.com/lin-simon/Discord.py-RIOT-API-Bot" target="_blank"><img src="Assets/bot.png" width="100%" height="75%" style="border-radius:10px"></a>
             <p>Riot Games API Discord Bot</p>
@@ -36,6 +43,6 @@
         <article class="card">
         <a href="https://github.com/lin-simon/lin-simon.github.io" target="_blank"><img src="Assets/html_css-feature_0.png" width="100%" height="75%" style="border-radius:10px"></a>
             <p>Portfolio Website</p>   
-        </article>
+        </article>  
     </section>
 </div>
