fix form submit

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                                 <textarea name="body" class="form-control" rows="5" id="comment" name="text" placeholder="Body"></textarea>
                             </div>
                         </form>
-                        <button type="button" name="submit" class="btn btn btn-outline-dark"><i class="fa-solid fa-share"></i></button>
+                        <button type="submit" name="submit" class="btn btn-outline-dark"><i class="fa-solid fa-share"></i></button>
                     </div>
                 </div>
             </div>
