--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-6">
                         <!-- form fields -->
-                        <form method="post" action="/script/mail.php">
+                        <form method="post" action="mail.php">
                             <input type="text" name="name" class="form-control mt-3" placeholder="Name">
                             <input type="email" name="email" class="form-control mt-3" placeholder="Email">
                             <input type="text" name="subject" class="form-control mt-3" placeholder="Subject">
