--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                             <h4 class="card-title">Discord RIOT API Chatbot</h4>
                             <p class="card-text">A Discord Chatbot employing Riot Games API for <b>statistical analysis</b> of player data in games. Uses <b>Selenium Webdriver</b> to scrape player and game Assets to produce a visually appealing interface.</p>
                             <div style="text-align: center; font-size: 2.1rem;">
-                                <img src="Assets/python.png" style="width:16.6%; height: 16.6%;"></i>&nbsp<img src="Assets/discord.png" style="width:16.6%; height: 16.6%;"></i>&nbsp<img src="Assets/selenium.png" style="width:16.6%; height: 16.6%;">
+                                <img src="Assets/python.png" style="width:16.6%; height: 16.6%;"></i>&nbsp<img src="Assets/discord.png" style="width:18.6%; height: 18.6%;"></i>&nbsp<img src="Assets/selenium.png" style="width:16%; height: 16%;">
                             </div>
                             <div class="text-center">
                                 <a href="https://github.com/lin-simon/Discord.py-RIOT-API-Bot" target="_blank" class="btn btn btn-outline-dark">View GitHub Repo</a>
@@ -126,7 +126,6 @@
                         <div class="card-body">
                             <h4 class="card-title">Haar Classifier - Obj. Recognition</h4>
                             <p class="card-text">A machine learning object detection program I self trained using OpenCV to identify objects in images and real-time videos/gameplay. Trained over <b>1000+</b> manually produced images.</p>
-
                             <div style="text-align: center; font-size: 2.1rem;">
                                 <img src="Assets/python.png" style="width:16.6%; height: 16.6%;"></i>&nbsp<img src="Assets/opencv_logo_icon_170887.png" style="width:16.6%; height: 16.6%;"></i>&nbsp<img src="Assets/xml.png" style="width:16.6%; height: 16.6%;">
                             </div>
@@ -168,7 +167,7 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-6">
                         <!-- form fields -->
-                        <form method="post" action="mail.php">
+                        <form action="https://linsimon.com/mail.php" method="post">
                             <input type="text" name="name" class="form-control mt-3" placeholder="Name">
                             <input type="email" name="email" class="form-control mt-3" placeholder="Email">
                             <input type="text" name="subject" class="form-control mt-3" placeholder="Subject">
