--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             <div class="text-center">
                 <div class="row justify-content-center">
                     <div class="col-lg-6">
-                        <form action="https://linsimon.com/mail.php" method="post">
+                        <form action="mail.php" method="post">
                             <input type="text" name="name" class="form-control mt-3" placeholder="Name">
                             <input type="email" name="email" class="form-control mt-3" placeholder="Email">
                             <input type="text" name="subject" class="form-control mt-3" placeholder="Subject">
