--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                             <p class="card-text">A machine learning object detection program I self trained using OpenCV to identify objects in images and real-time videos/gameplay. Trained over <b>1000+</b> manually produced images.</p>
                             <div style="text-align: center; font-size: 2.1rem;">
                                 <img src="Assets/python.png" style="width:16.6%; height: 16.6%;"></i>&nbsp<img src="Assets/opencv_logo_icon_170887.png" style="width:16.6%; height: 16.6%;"></i>&nbsp<img src="Assets/xml.png" style="width:16.6%; height: 16.6%;">
-                            </div>
+                            </div>  
                             <div class="text-center">
                                 <a href="https://github.com/lin-simon/OpenCV" target="_blank" class="btn btn btn-outline-dark">View GitHub Repo</a>
                             </div>
@@ -150,9 +150,9 @@
                         <img class="card-img-top" src="Assets/website.png" alt="Card image" style="width:100%; height: 255px">
                         <div class="card-body">
                             <h4 class="card-title">Personal Portfolio Website</h4>
-                            <p class="card-text">My personal website showcasing my open-source passion projects. Built using HTML, CSS, JavaScript and Bootstrap v5.0. <b>Responsive design</b> across mobile, desktop and other large-screen devices. PHP backend for collecting HTML form data.</p>
+                            <p class="card-text">My personal website showcasing my open-source passion projects. Built using HTML, CSS, JavaScript and Bootstrap v5.0. <b>Responsive design</b> across mobile, desktop and other large-screen devices. EmailJS backend for sending and receiving form data.</p>
                             <div style="text-align: center; font-size: 1.8rem;">
-                                <i class="fa-brands fa-html5 fa-2xl" style="color: #faab00;"></i>&nbsp<i class="fa-brands fa-css3-alt fa-2xl" style="color: #2ea4ff;"></i> <i class="fa-brands fa-bootstrap fa-2xl" style="color: #8704cd;"></i> <i class="fa-brands fa-square-js fa-2xl" style="color: #fccb1d;"></i>&nbsp<i class="fa-brands fa-php fa-2xl" style="color: #6166c2;"></i>
+                                <i class="fa-brands fa-html5 fa-2xl" style="color: #faab00;"></i>&nbsp<i class="fa-brands fa-css3-alt fa-2xl" style="color: #2ea4ff;"></i> <i class="fa-brands fa-bootstrap fa-2xl" style="color: #8704cd;"></i> <i class="fa-brands fa-square-js fa-2xl" style="color: #e0b312;"></i>
                             </div>
                             <div class="text-center">
                                 <a href="https://github.com/lin-simon/lin-simon.github.io" target="_blank" class="btn btn btn-outline-dark">View GitHub Repo</a>
