--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-6">
                         <input type="text" id="name" class="form-control mt-3" placeholder="Name" required>
-                        <input type="email" id="email" class="form-control mt-3" placeholder="Email" required>
+                        <input type="email" id="email" class="form-control mt-3" placeholder="Email Address" required>
                         <div class="mt-3">
                             <textarea id="message" class="form-control" rows="5"placeholder="Body" required></textarea>
                          </div>
