--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
             <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
                 <h2 class="hero_title"><b>hi, I'm simon,</b></h2><br>
-                <h3 style="font-size: 2.2rem;">
+                <h3 style="font-size: 2.1rem;">
                     <b>
                         an undergrad
                         studying <span style="color:#94d32f">Computer Science</span>
-                        <span style="color: #ffffff">@</span> <span style="color: #3695e2">Ryerson</span> <span style="color: #fbc02ae5"> University</span>
+                        <span style="color: #ffffff">@</span> <span style="color: #3695e2">Toronto Metropolitan</span> <span style="color: #fbc02ae5"> University</span>
                     </b>
                 </h3>
             </div>
@@ -185,6 +185,7 @@
             </div>
         </div>
     </section>
+    <h6 class="text-center" style="font-size: 0.8rem; font-style: italic;">resume attached below</h6>
     <footer id="footer">
         <div class="container-fluid">
             <div class="social-icons">
