--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <title>Simon Lin's Portfolio</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
   <script src="https://kit.fontawesome.com/a45343ae50.js" crossorigin="anonymous"></script>
   <link rel="icon" href="/Assets/simonlin.png">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700">
   <link rel="stylesheet" href="index.css">
   <script type="text/javascript"
@@ -60,12 +60,17 @@
         <div class="container-fluid">
             <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
-                <h2 class="hero_title"><b>hi, I'm simon,</b></h2><br>
-                <h3 style="font-size: 2.1rem;">
+                <h2 id="first-hi" class="hero_title"><b>hi,</b><span id="first-simon" class="hero_title"><b> I'm simon</b></span><span id="comma" class="hero_title"><b>,</b></span></h2>
+                <h3 id="second" style="font-size: 2.1rem;">
                     <b>
                         an undergrad
-                        studying <span style="color:#94d32f">Computer Science</span>
-                        <span style="color: #ffffff">@</span> <span style="color: #3695e2">Toronto Metropolitan</span> <span style="color: #fbc02ae5"> University</span>
+                        studying <span style="color:#aaff21">Computer Science</span>
+                        <span style="color: #ffffff">@</span> <span style="color: #fbc02ae5">Toronto Metropolitan</span> <span style="color: #fbc02ae5"> University</span>
+                    </b>
+                </h3>
+                <h3 id="job" style="font-size: 2rem;"><br>
+                    <b>
+                        <span style="color: #b6ff17">QA Specialist Intern </span>@ <span style="color: #3695e2">SOTI</span>, <span style="color: #beddf6">Fall 2023</span>
                     </b>
                 </h3>
             </div>
