--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         <div class="container-fluid">
             <div class="social-icons">
                 <a href="https://github.com/lin-simon/" target="_blank"><i class="fab fa-github"></i></a>
-                <a href="https://www.linkedin.com/in/simon-lin-65615823a/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/lin-simon/" target="_blank"><i class="fab fa-linkedin"></i></a>
                 <a href="Assets/Simons_Resume.pdf" target="_blank" alt="Simon's Resume"><i class="fa-regular fa-file-lines"></i></a>
             </div>
         </div>
