--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto">
+                <ul id="fade-nav" class="navbar-nav ms-auto">
                     <li class="nav-item active">
                         <a class="nav-link" href="#home">Home</a>
                     </li>
@@ -162,14 +162,13 @@
                         <img class="card-img-top" src="Assets/website.png" alt="Card image" style="width:100%; height: 255px">
                         <div class="card-body">
                             <h4 class="card-title">Personal Portfolio Website</h4>
-                            <p class="card-text">My personal website showcasing my open-source passion projects. Built using HTML, CSS, JavaScript and Bootstrap v5.0. <b>Responsive design</b> across mobile, desktop and other large-screen devices. EmailJS backend for sending and receiving form data.</p>
+                            <p class="card-text">My personal website showcasing my open-source coding projects. Built using HTML, CSS, JavaScript and Bootstrap v5.0. <b>Responsive design</b> across mobile, desktop and other large-screen devices. EmailJS backend for sending and receiving form data.</p>
                             <div style="text-align: center; font-size: 1.8rem;">
                                 <i class="fa-brands fa-html5 fa-2xl" style="color: #faab00;"></i>&nbsp<i class="fa-brands fa-css3-alt fa-2xl" style="color: #2ea4ff;"></i> <i class="fa-brands fa-bootstrap fa-2xl" style="color: #8704cd;"></i> <i class="fa-brands fa-square-js fa-2xl" style="color: #e0b312;"></i>
                             </div>
                             <div class="text-center">
                                 <a href="https://github.com/lin-simon/lin-simon.github.io" target="_blank" class="btn btn btn-outline-dark">View GitHub Repo</a>
                             </div>
-                            
                         </div>
                     </div>
                 </div>
