--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         gtag('js', new Date());
         gtag('config', 'G-8MXX8B726F');
     </script>
-  <title>Simon Lin's Portfolio</title>
+  <title>Simon Lin | Portfolio</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
