--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 </h3>
                 <h3 id="job" style="font-size: 2rem;"><br>
                     <b>
-                        <span style="color: #b6ff17">Prev. Intern </span>@ <span style="color: #3695e2">SOTI</span>
+                        <span style="color: #b6ff17">SWE</span> @ <span style="color: #FF0000">Magna</span> | <span style="color: #b6ff17">Prev. </span>@ <span style="color: #3695e2">SOTI</span>
                     </b>
                 </h3>
             </div>
