--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
   <div id="app"></div>
-  <script type="module" src="vite-project/src/components/main.js"></script>
+  <script type="module" src="vite-project/src/main.js"></script>
 </body>
 </html>
