--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -4,11 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>>simon_lin</title>
-
+  <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
 </head>
 <body>
   <div id="app"></div>
-
   <script type="module" src="/src/main.js"></script>
 </body>
 </html>
